[package]
name = "openqasm"
version = "0.1.0"
authors = ["Tuomas Laakkonen <pigworts2@gmail.com>"]
description = "Parser and translator for OpenQASM 2.0"
repository = "https://github.com/tuomas56/openqasm-rs"
license = "MIT or Apache-2.0"
keywords = ["quantum", "qasm"]
categories = ["parser-implementations", "compilers"]
edition = "2021"

[dependencies]
petgraph = "0.6.0"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
ariadne = { version = "0.1.3", optional = true }
thiserror = "1.0.30"
pretty = { version = "0.11.2", optional = true }

[build-dependencies]
lalrpop = "0.19.7"

[features]
default = ["ariadne", "pretty"]
