[package]
name = "openqasm"
version = "0.1.0"
authors = ["Tuomas Laakkonen <pigworts2@gmail.com>"]
description = "Parser and translator for OpenQASM 2.0"
repository = "https://github.com/tuomas56/openqasm-rs"
license = "MIT or Apache-2.0"
keywords = ["quantum", "qasm"]
categories = ["parser-implementations", "compilers"]
edition = "2021"

[dependencies]
petgraph = "0.6.0"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
thiserror = "1.0.30"
num = { version = "0.4.0", default-features = false }
ariadne = { version = "0.1.3", optional = true }
pretty = { version = "0.11.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
lalrpop = "0.19.7"
rustc_version = "0.4.0"

[features]
default = []

[[example]]
name = "basic"
required-features = ["ariadne"]

[[example]]
name = "pretty"
required-features = ["pretty"]

[package.metadata.docs.rs]
all-features = true
