[package]
name = "openqasm"
version = "0.1.3"
authors = ["Tuomas Laakkonen <pigworts2@gmail.com>"]
description = "Parser and translator for OpenQASM 2.0"
repository = "https://github.com/tuomas56/openqasm-rs"
homepage = "https://github.com/tuomas56/openqasm-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["quantum", "qasm"]
categories = ["parser-implementations", "compilers"]
edition = "2021"

[dependencies]
petgraph = "0.6.0"
lalrpop-util = { version = "0.19.7" }
logos = "0.12.0"
thiserror = "1.0.30"
num = { version = "0.4.3", default-features = false, features = ["libm"] }
ariadne = { version = "0.1.3", optional = true }
pretty = { version = "0.11.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
lalrpop = "0.19.7"
rustc_version = "0.4.0"

[dev-dependencies]
rand = "0.8.5"

[features]
default = []

[[example]]
name = "basic"
required-features = ["ariadne"]

[[example]]
name = "pretty"
required-features = ["pretty"]

[[example]]
name = "linear"
required-features = ["ariadne"]

[package.metadata.docs.rs]
all-features = true
