[package]
name = "qasm-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openqasm = { path = "../openqasm", features = ["ariadne", "pretty", "serde"] }
clap = { version = "3.1.0", features = ["derive"] }
serde_json = "1.0"
plotters = { version = "0.3.1", default-features = false, features = ["svg_backend"] }
